--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
   "author": "Mohammad Anwari <mdamt@mdamt.net> (http://aksi.mdamt.net/)",
   "license": "MIT",
   "devDependencies": {
-    "mocha": "^2.4.5"
+    "mocha": "^2.4.5",
+    "should": "^8.2.2",
+    "sqlite3": "^3.1.1"
   },
   "dependencies": {
-    "hapi": "^13.0.0"
+    "hapi": "^13.0.0",
+    "pluralize": "^1.2.1"
   }
 }
