--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "MIT",
   "devDependencies": {
     "mocha": "^2.4.5",
+    "mongoose": "^4.4.4",
     "should": "^8.2.2",
     "sqlite3": "^3.1.1"
   },
