--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "sqlite3": "^3.1.1"
   },
   "dependencies": {
+    "async": "^2.0.0-rc.5",
     "hapi": "^13.0.0",
     "pluralize": "^1.2.1"
   },
